Fix extra padding on error message

--- a/src/main/resources/static/css/mainv2_3.css
+++ b/src/main/resources/static/css/mainv2_3.css
@@ -535,7 +535,7 @@ form.seamless input {
   margin-bottom: 1rem;
   margin-top: 1rem;
   border-radius: 5px;
-  line-height: 30px;
+  line-height: 45px;
 }
 
 .description-alert {
